--- a/src/app/components/tournament/item-tournament/add-team-to-tournament/add-team-to-tournament.component.html
+++ b/src/app/components/tournament/item-tournament/add-team-to-tournament/add-team-to-tournament.component.html
@@ -2,6 +2,7 @@
   [item]="'team'"
   [parentItem]="'tournament'"
   [itemsList$]="availableTeams$"
+  [avatarProperty]="'team_logo_url'"
   [dialogId]="dialogId"
   (add)="onAdd($event)"
 ></app-add-item-dialog-from-list>
