team logo resize

--- a/src/app/components/match/add-edit-match/add-edit-match.component.html
+++ b/src/app/components/match/add-edit-match/add-edit-match.component.html
@@ -44,7 +44,7 @@
           [title]="'Home Team'"
           [formField]="matchForm.controls['team_a']"
           [nullable]="false"
-          [avatarProperty]="'team_logo_url'"
+          [avatarProperty]="'team_logo_icon_url'"
           [stringifyFn]="stringifyTitle"
         ></app-select-from-list>
 
@@ -53,7 +53,7 @@
           [title]="'Away Team'"
           [formField]="matchForm.controls['team_b']"
           [nullable]="false"
-          [avatarProperty]="'team_logo_url'"
+          [avatarProperty]="'team_logo_icon_url'"
           [stringifyFn]="stringifyTitle"
         ></app-select-from-list>
 
