--- a/src/app/components/team/item-team/item-team.component.html
+++ b/src/app/components/team/item-team/item-team.component.html
@@ -13,7 +13,7 @@
       <!--      full url with port: {{ urlWithPort }}<br>-->
 
       <img
-        src="{{url}}{{team.team_logo_url}}"
+        src="{{url}}{{team.team_logo_web_url}}"
         width="100px"
         height="100px"
         alt="{{team.title | uppercase}} Logo"
