--- a/src/app/components/team/list-of-teams-with-city/list-of-teams-with-city.component.html
+++ b/src/app/components/team/list-of-teams-with-city/list-of-teams-with-city.component.html
@@ -4,5 +4,6 @@
   [formatPath]="formatPath"
   [titleProperty]="titleProperty"
   [_size]="_size"
+  [avatarUrl]="'team_logo_icon_url'"
   [hoverable]="hoverable"
 ></app-list-of-items-island>
