tournaments image resize added

--- a/src/app/components/sport/item-sport/item-sport-with-season/item-sport-with-season.component.html
+++ b/src/app/components/sport/item-sport/item-sport-with-season/item-sport-with-season.component.html
@@ -51,6 +51,7 @@
 
           <app-island-list-of-tournaments
             [data]="tours"
+            [avatarUrl]="'tournament_logo_icon_url'"
           ></app-island-list-of-tournaments>
 
 
