--- a/src/app/components/tournament/item-tournament/item-tournament.component.html
+++ b/src/app/components/tournament/item-tournament/item-tournament.component.html
@@ -5,7 +5,7 @@
     </h3>
     <p style="text-align: center">
       <img
-        src="{{url}}{{tournament.tournament_logo_url}}"
+        src="{{url}}{{tournament.tournament_logo_web_url}}"
         width="200px"
         alt="{{tournament.title | uppercase}} Logo"
       >
