--- a/src/app/components/sport/item-sport/with-teams/with-teams.component.html
+++ b/src/app/components/sport/item-sport/with-teams/with-teams.component.html
@@ -2,32 +2,59 @@
   <div class="sport content__title">
     <h3 class="tui-text_h3">{{ sport.title | uppercase }}</h3>
   </div>
-  @if (teamsInSport$ | async; as teams) {
-    <div class="tournament content__body">
-      <div class="one_col_container">
-        <div class="tournament content__body__title__flex">
-          <app-edit-button
-            [action]="'add'"
-            [item]="'Team'"
-            [dialogId]="'addDialog'"
-          ></app-edit-button>
 
-          <app-add-edit-team
-            [action]="'add'"
-            [dialogId]="'addDialog'"
-            [allSponsors]="allSponsors$ | async"
-            [allSponsorLines]="allSponsorLines$ | async"
-          ></app-add-edit-team>
-        </div>
+  <div class="tournament content__body">
+    <div class="one_col_container">
+      <div class="tournament content__body__title__flex">
+        <app-edit-button
+          [action]="'add'"
+          [item]="'Team'"
+          [dialogId]="'addDialog'"
+        ></app-edit-button>
 
+        <app-add-edit-team
+          [action]="'add'"
+          [dialogId]="'addDialog'"
+          [allSponsors]="allSponsors$ | async"
+          [allSponsorLines]="allSponsorLines$ | async"
+        ></app-add-edit-team>
+      </div>
+
+      <app-base-search-form
+        [placeholder]="'Team title'"
+        (search)="onSearch($event)"
+      ></app-base-search-form>
+
+      <!--      <div class="search block__fullwidth_center">-->
+      <!--        <div class="" style="display: block; padding: 10px; min-width: 100%">-->
+      <!--          <div class="tui-form__row">-->
+      <!--            <form-->
+      <!--              [formGroup]="searchForm"-->
+      <!--            >-->
+      <!--              <tui-input-->
+      <!--                formControlName="searchValue"-->
+      <!--                style="min-width: max-content"-->
+      <!--                [tuiTextfieldCleaner]="true"-->
+      <!--              >-->
+      <!--                SEARCH BY {{ 'Team title' | uppercase }}-->
+      <!--              </tui-input>-->
+      <!--            </form>-->
+      <!--          </div>-->
+      <!--        </div>-->
+      <!--      </div>-->
+
+      @if (teamInSportSearchResults$ | async; as teams) {
         <app-list-of-teams
           [sportId]="sport.id!"
           [teams]="teams"
           [formatPath]="teamItemHref"
           [titleProperty]="islandTeamTitleProperty"
         ></app-list-of-teams>
+      } @else {
+        <tui-loader></tui-loader>
+      }
 
-      </div>
     </div>
-  }
+  </div>
+
 }
