list of teams refactor

--- a/src/app/components/sport/item-sport/with-teams/with-teams.component.html
+++ b/src/app/components/sport/item-sport/with-teams/with-teams.component.html
@@ -6,6 +6,9 @@
   <div class="tournament content__body">
     <div class="one_col_container">
       <div class="tournament content__body__title__flex">
+        <div class="content__body__title__flex">
+          <h2>LIST OF TEAMS</h2>
+        </div>
         <app-edit-button
           [action]="'add'"
           [item]="'Team'"
