--- a/src/app/shared/ui/search/base-search-form/base-search-form.component.html
+++ b/src/app/shared/ui/search/base-search-form/base-search-form.component.html
@@ -6,6 +6,7 @@
           formControlName="searchValue"
           style="min-width: max-content"
           [tuiTextfieldCleaner]="true"
+          [tuiTextfieldIcon]="'tuiIconSearchLarge'"
         >
           SEARCH BY {{ placeholder | uppercase }}
         </tui-input>
