--- a/src/app/shared/ui/search/search-input-autocomplete/search-input-autocomplete.component.html
+++ b/src/app/shared/ui/search/search-input-autocomplete/search-input-autocomplete.component.html
@@ -3,7 +3,7 @@
     <tui-combo-box
       formControlName="person"
     >
-      {{ 'search ' | uppercase }} {{ placeholder | uppercase }} {{ ' title' | uppercase }}
+      {{ 'search ' | uppercase }} {{ placeholder | uppercase }} {{ ' by title' | uppercase }}
       <tui-data-list-wrapper
         *tuiDataList
         [itemContent]="stringifySurnameName | tuiStringifyContent"
