position intagated in front

--- a/src/app/components/sport/item-sport/with-players/with-players.component.html
+++ b/src/app/components/sport/item-sport/with-players/with-players.component.html
@@ -5,9 +5,9 @@
 }
 
 @if (paginatedPlayerInSportSearchResults$ | async; as players) {
-  <div class="tournament content__body">
+  <div class="sport content__body">
     <div class="one_col_container">
-      <div class="tournament content__body__title__flex">
+      <div class="sport content__body__title__flex">
         <h2>LIST OF PLAYERS</h2>
         @if (sport$ | async; as sport) {
 
