--- a/src/app/components/sport/sport-nav/sport-nav.component.html
+++ b/src/app/components/sport/sport-nav/sport-nav.component.html
@@ -5,6 +5,7 @@
     [mapItemToSportRoute]="sportRoutWithSeason"
     [mapItemToTeamsRoute]="sportTeamsRout"
     [mapItemToPayersRoute]="sportPlayersRout"
+    [mapItemToPositionRoute]="sportPositionsRout"
   >
   </app-header-menu>
 } @else {
