--- a/src/app/shared/ui/headermenu/header-menu.component.html
+++ b/src/app/shared/ui/headermenu/header-menu.component.html
@@ -71,6 +71,14 @@
           >
             PLAYERS
           </a>
+          <a
+            routerLinkActive="active"
+            [routerLink]="mapItemToPositionRoute(item)"
+            tuiOption
+            ariaCurrentWhenActive="page"
+          >
+            POSITIONS
+          </a>
         </tui-opt-group>
       </tui-data-list>
     </ng-template>
