refactoring plus add table for position display

--- a/src/app/components/person/add-edit-person/add-edit-person.component.html
+++ b/src/app/components/person/add-edit-person/add-edit-person.component.html
@@ -1,6 +1,6 @@
 <ng-template
   let-observer
-  [tuiDialogOptions]="{label: action.toUpperCase() + ' Person', size: 'm'}"
+  [tuiDialogOptions]="{label: action.toUpperCase() + ' POSITION', size: 'm'}"
   [(tuiDialog)]="open"
 >
   <form
