--- a/src/app/components/position/add-edit-position/add-edit-position.component.html
+++ b/src/app/components/position/add-edit-position/add-edit-position.component.html
@@ -1,6 +1,6 @@
 <ng-template
   let-observer
-  [tuiDialogOptions]="{label: action.toUpperCase() + ' TOURNAMENT', size: 'm'}"
+  [tuiDialogOptions]="{label: action.toUpperCase() + ' POSITION', size: 'm'}"
   [(tuiDialog)]="open"
 >
   <form
